src/styles/base.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  text-decoration: none;
  list-style: none;
  border: none;
  outline: none;
}

:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;
}

/* HEADER Starts*/ 
header {
  display: flex;
  width: 100%;
  padding: 1rem;
  justify-content: flex-end;
  align-items: center;
}
/* HEADER ENDS*/

/* TOGGLE LIGHT/DARK MODE */
[data-theme="light"] {
  --color-bg: #ffffff;
  --color-fg: #000000;
}

[data-theme="dark"] {
  --color-bg: #000000;
  --color-fg: #ffffff;
}

.checkbox {
  opacity: 0;
  position: absolute;
}

.checkbox-label {
  background-color: #111;
  width: 32px;
  height: 20px;
  border-radius: 50px;
  position: relative;
  padding: 5px;
  cursor: pointer;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.checkbox-label .ball {
  background-color: #fff;
  width: 12px;
  height: 12px;
  position: absolute;
  left: 4px;
  top: 4px;
  border-radius: 50%;
  transition: transform 0.2s linear;
}

.checkbox:checked + .checkbox-label .ball {
  transform: translateX(10px);
}

/* TOGGLE ENDS */


body {
  background-color: var(--color-bg);
  color: var(--color-fg);

  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.flex {
  display: flex;
}
.flex-row {
  flex-direction: row;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}

